[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ldmm"
description = "LDMM image processing"
authors = [
    {name = "Example Author", email = "author@example.com"}
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests > 2.26.0",
    "numpy",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "matplotlib"
]
